--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-
     <style>
       body{
-        font-family: "Inter", sans-serif;
+        font-family: 'Inter', sans-serif;
         margin: 0;
       }
     </style>
